# luasdl

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  example.lua  init.lua  install_manifest.txt  libluasdl.dylib  luasdl-1.0-0.rockspec  sdl_api.c  sdl_api.h
face-detector/: run.lua  run.lua~
